# python-project-skeleton

./: .pre-commit-config.yaml  CHANGELOG.rst  CONTRIBUTING.rst  MANIFEST.in  README.rst  pyproject.toml  tox.ini
.github/workflows/: ci.yml  publish-tagged-to-pypi.yml
devtools/: docs_requirements.txt
docs/: conf.py  how_to_use_the_template.rst  the_rationale_behind.rst
docs/nonlisted/: badges.rst  ci_platforms.rst  configuration_files.rst  project_layout.rst  readthedocs.rst
src/sampleproject/: __init__.py  __main__.py
tests/: test_1.py
