[project]
name = "jmct-sampleproject"
description = "A skeleton template for Python projects."
readme = "README.rst"
license = {text = "MIT"}
authors = [
    {name = "Joao Miguel Correia Teixeira", email = "joaomcteixeira@gmail.com"},
]

# complete classifier list:
# http://pypi.org/classifiers/
classifiers = [
    'Development Status :: 4 - Beta',
    # 'License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)',
    'License :: OSI Approved :: MIT License',
    'Intended Audience :: Science/Research',
    'Natural Language :: English',
    'Operating System :: POSIX',
    'Operating System :: MacOS',
    'Operating System :: Microsoft',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Topic :: Scientific/Engineering :: Bio-Informatics',
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]

keywords=[
    'ci', 'continuous-integration', 'project-template', 'project-skeleton',
    'sample-project',
    # eg: 'keyword1', 'keyword2', 'keyword3',
]

requires-python = ">=3.8, <4"
dependencies = [
    # https://stackoverflow.com/questions/14399534
    'matplotlib>=3',
]

dynamic = ["version"]

[project.urls]
homepage = "https://github.com/joaomcteixeira/python-project-skeleton"
documentation = "https://python-project-skeleton.readthedocs.io/en/latest/"
repository = "https://github.com/joaomcteixeira/python-project-skeleton.git"
changelog = "https://github.com/joaomcteixeira/python-project-skeleton/blob/main/CHANGELOG.rst"

[project.optional-dependencies]
# e.g.:
# rst = [ "docutils>=0.11" ]

[project.scripts]
#samplecli1 = "sampleproject.cli_int1:main"

[tool.pytest.ini_options]
# If a pytest section is found in one of the possible config files
# (pytest.ini, tox.ini or setup.cfg), then pytest will not look for any others,
# so if you add a pytest config section elsewhere,
# you will need to delete this section from setup.cfg.
#norecursedirs =
#migrations
addopts = "-p pytest_cov"
python_files = [
    "test_*.py",
    "*_test.py",
    "tests.py"
]
#addopts =
#    -ra
#    --strict
#    --doctest-modules
#    --doctest-glob=\*.rst
#    --tb=short
testpaths = [
    "tests"
]

[tool.ruff]
target-version = "py38"
builtins = ["ellipsis"]
exclude = [
    ".eggs",
    "doc",
    "_typed_ops.pyi",
]
# E402: module level import not at top of file
# E501: line too long - let black worry about that
# E731: do not assign a lambda expression, use a def
ignore = [
    "E402",
    "E501",
    "E731",
]
select = [
    # Pyflakes
    "F",
    # Pycodestyle
    "E",
    "W",
    # isort
    "I",
    # Pyupgrade
    "UP",
]

[tool.ruff.isort]
lines-after-imports = 2

[tool.setuptools_scm]
write_to = "src/sampleproject/_version.py"

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=46.1.0", "setuptools_scm[toml]>=6.2", "wheel"]

